2004-11-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: reverted earlier changes for
	tclConfig.h changes to tcl, since those have been reverted for now.
	
	Note that newly added macosx/Wish.xcode will not work without
	tclConfig.h, this project has not been removed again.

2004-11-18  Reinhard Max  <max@suse.de>

        * unix/tcl.m4 (SC_CONFIG_MANPAGES): Applied an improved version of
        * unix/configure.in:                patch #996085, that introduces
        * unix/Makefile.in:                 --enable-man-suffix. 

        * unix/installManPage:              added
        * unix/mkLinks.tcl:                 removed
        * unix/mkLinks:                     removed
	* unix/configure:                   generated

2004-11-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCanvWind.c (ConfigureWinItem): unmap windows
	immediately when state hidden is requested. [Bug 982248]

	* generic/tkCanvImg.c (ImageToPostscript): don't try ps generation
	of canvas image item without image specified. [Bug 1032300]

	* library/console.tcl (::tk::console::ExpandVariable): correct
	array keyname expansion. [Bug 1004508] (bold)

	* generic/tkPanedWindow.c (Tk_PanedWindowObjCmd): set save_under X
	attr to prevent expose events when moving sash. [Bug 1036963]

2004-11-16  Vince Darley  <vincentdarley@users.sourceforge.net>

	* doc/text.n: clarified documentation on use of -tabs option.

2004-11-16  Don Porter  <dgp@users.sourceforge.net>

	* library/msgs/it.msg:	Updated Italian message catalog.
	Thanks to Roberto Ugoccioni [Bug 1063675].

2004-11-16  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: 
	* macosx/buildTkConfig.tcl: fixes for tclConfig.h changes.

	* macosx/Wish.pbproj/project.pbxproj: fixed references to renamed
	bitmap files.

	* macosx/Wish.xcode/project.pbxproj (new):
	* macosx/Wish.xcode/default.pbxuser (new):
	* macosx/Wish-Info.plist (new):